fix spacing

--- a/src/components/Pagination/pagination.module.css
+++ b/src/components/Pagination/pagination.module.css
@@ -40,6 +40,10 @@
   z-index: 99999;
 }
 
+.label {
+  padding-bottom: 2px;
+}
+
 .label pre {
   display: inline;
 }
@@ -48,7 +52,6 @@
   font-size: 1rem;
   color: var(--theme-text);
   font-size: 1.5rem;
-  padding-top: 2px;
 }
 
 .button {
